--- a/index.html
+++ b/index.html
@@ -13,11 +13,32 @@
 <link rel="icon" href="icon.png">
 
 <style>
+:root, * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #000;
+  color: #fff;
+color: inherit;
+  text-decoration: none;
+  font-family: system-ui, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
+img,embes,iframe,video {
+  max-width: 100%;
+  display: block;
+}
 </style>
 
 <body>
 
+  <main>
+  <p>
+    Prod Ready
+  </p>
+  </main>
 </body>
 
 <script>
