--- a/index.html
+++ b/index.html
@@ -1,48 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Messenger Chat Renderer</title>
-
+<meta name="description" content="This is a test.">
 <meta property="og:title" content="Actwu test">
-
 <meta property="og:description" content="This is a test.">
-
 <meta property="og:image" content="">
-
 <meta property="og:url" content="https://actwu.github.io/test/">
-
+<meta property="og:type" content="website">
+<meta name="theme-color" content="#000">
 <link rel="icon" href="icon.png">
 
 <style>
-:root, * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-color: #000;
-  color: #fff;
-
-  text-decoration: none;
-  font-family: system-ui, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root,* {
+margin:0;
+padding:0;
+box-sizing:border-box;
+background-color:#000;
+color:#fff;
+text-decoration:none;
+font-family:system-ui,sans-serif;
+-webkit-font-smoothing:antialiased;
+-moz-osx-font-smoothing:grayscale;
 }
-
-img,embes,iframe,video {
-  max-width: 100%;
-  display: block;
+img,embed,iframe,video {
+max-width:100%;
+display:block;
 }
 </style>
 
-<body>
+<body role="document">
+<main role="main" 
+aria-label="Main content">
+<h1>Prod Ready</h1>
+</main>
 
-  <main>
-  <h1>
-    Prod Ready
-  </h1>
-  </main>
 </body>
-
 <script>
 </script>
-
 </html>
