--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Messenger Chat Renderer</title>
+<title>Test</title>
 <meta name="description" content="This is a test.">
 <meta property="og:title" content="Actwu test">
 <meta property="og:description" content="This is a test.">
@@ -12,23 +12,44 @@
 <meta name="theme-color" content="#000">
 <link rel="icon" href="icon.png">
 
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' https://cdn.jsdelivr.net;
+  style-src 'self' https://fonts.googleapis.com;
+  font-src https://fonts.gstatic.com;
+  img-src 'self' https://cdn.jsdelivr.net data:;
+  frame-ancestors 'none';
+  object-src 'none';
+  base-uri 'none';
+">
+<meta name="referrer" content="strict-origin-when-cross-origin">
+<meta http-equiv="X-Content-Type-Options" content="nosniff">
+<meta http-equiv="X-Frame-Options" content="DENY">
+<meta http-equiv="Permissions-Policy" content="geolocation=(), camera=(), microphone=()">
+
+
 <style>
-:root,* {
-margin:0;
-padding:0;
-box-sizing:border-box;
-background-color:#000;
-color:#fff;
-text-decoration:none;
-font-family:system-ui,sans-serif;
--webkit-font-smoothing:antialiased;
--moz-osx-font-smoothing:grayscale;
+:root,*{--p:#3855d7;--b:#19191c;--f:#fafafa;--d:#202127;--font:sans-serif;--pad:1rem;--gap:10;--mar:0.3rem;--radius:8px;--maxw:100%;--midw:450px;--fz:1rem;--fz-lg:1.2rem; margin:0; padding:0; box-sizing:border-box;
+background-color:var(--b);color:var(--f); text-decoration:none; font-family:var(--font); border:unset; outline:unset; }
+body{margin:0 auto auto;background:var(--b);color:var(--f);font-family:var(--font);display:flex;flex-direction:column;padding:5px;box-sizing:border-box;width:100vw;max-width:var(--midw);text-align:center;justify-content: center;place-content: center; align-content: center; min-height: 100svh;}
+input,button,a,video{background:var(--d);color:var(--f);border:none;padding:var(--pad);border-radius:var(--radius);width:var(--maxw);max-width:var(--midw);font-size:var(--fz);box-sizing:border-box;}
+video,embed[video],embed[vid],iframe[video],iframe[vid] {aspect-ratio:16/9;}
+input,button,a {min-height: 0.12in;min-width: 0.3in;}
+span {display: flex;flex-wrap: wrap;flex-direction: row;align-items: center;justify-content: center;gap: var(--gap);}
+span > * {display: flex;flex: 1;margin: 0;}
+body > *:not(:last-child) {margin-bottom: var(--mar);}
+span > *:not(:last-child) {margin-right: var(--mar);}
+[p=''],[p='hover']:hover,[p='active']:active {background:var(--p);color:var(--f);cursor:pointer;
 }
-img,embed,iframe,video {
-max-width:100%;
-display:block;
-}
+input[type="date"]::-webkit-calendar-picker-indicator {opacity: 0;position: absolute;right: 0;width: 100%;height: 100%;cursor: pointer;}
+input[type="date"] {position: relative;background: var(--d) url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fafafa' viewBox='0 0 24 24'%3E%3Cpath d='M19 4h-1V2h-2v2H8V2H6v2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z'/%3E%3C/svg%3E") no-repeat right 1rem center;background-size: 1rem;padding-right: 2.5rem;color: var(--f);border: none;border-radius: var(--radius);font-size: var(--fz);width: var(--maxw);max-width: var(--midw);box-sizing: border-box;appearance: none;-webkit-appearance: none;-moz-appearance: none;cursor: pointer;}
+select, summary {background: var(--d);color: var(--f);border: none;padding: var(--pad);border-radius: var(--radius);width: var(--maxw);max-width: var(--midw);font-size: var(--fz);box-sizing: border-box;appearance: none;-webkit-appearance: none;-moz-appearance: none;}
+select, summary {background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 10 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0l5 6 5-6z' fill='%23fafafa'/%3E%3C/svg%3E");background-repeat: no-repeat;background-position: right 1rem center;background-size: 1em;padding-right: 2.5rem;cursor: pointer;}
+details {padding: 0;max-width: var(--midw);border-radius: var(--radius);overflow: hidden;transition: all 0.3s ease-in-out;}
+summary {list-style: none;user-select: none;font-weight: bold;}
+summary::-webkit-details-marker {  display: none;}
 </style>
+
 
 <body role="document">
 <main role="main" 
@@ -39,4 +60,4 @@ aria-label="Main content">
 </body>
 <script>
 </script>
-</html>
+  </html>
