--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-frame-ancestors 'none';
+  script-src 'self' 'unsafe-inline';
+  style-src 'self' 'unsafe-inline';
   object-src 'none';
+  frame-ancestors 'none';
   base-uri 'none';
 ">
 <meta name="referrer" content="strict-origin-when-cross-origin">
