--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Test</title>
+<link rel="canonical" href="https://actwu.github.io/test/">
 <meta name="description" content="This is a test.">
 <meta property="og:title" content="Actwu test">
 <meta property="og:description" content="This is a test.">
@@ -34,11 +35,10 @@ summary {list-style: none;user-select: none;font-weight: bold;}
 summary::-webkit-details-marker {  display: none;}
 </style>
 
-
 <body role="document">
 <main role="main" 
 aria-label="Main content">
-<h1>Prod Ready</h1>
+<h1>Prod Ready?</h1>
 </main>
 
 </body>
